minor tweaks to make it look better on the Moto 360

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="watch_margin">4dp</dimen>
+
     <dimen name="analog_hand_seconds_stroke">4dp</dimen>
-    <dimen name="analog_hand_stroke">6dp</dimen>
+    <dimen name="analog_hand_stroke">8dp</dimen>
 
     <dimen name="lines_stroke">1dp</dimen>
     <dimen name="lines_thick_stroke">4dp</dimen>
 
-    <dimen name="lines_size">2dp</dimen>
+    <dimen name="lines_size">4dp</dimen>
     <dimen name="lines_thick_size">16dp</dimen>
     <dimen name="lines_thick_size_for_number">6dp</dimen>
 
@@ -17,5 +19,5 @@
     <dimen name="hand_extra_length">8dp</dimen>
 
     <dimen name="number_size">24sp</dimen>
-    <dimen name="number_offset">20dp</dimen>
+    <dimen name="number_offset">24dp</dimen>
 </resources>
