required new colors and dimensions for the outlines. Ambient mode will not draw all the clcok info

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="lines">#ffffff</color>
     <color name="numbers">#ffffff</color>
     <color name="analog_hands">#eeeeee</color>
+    <color name="analog_hands_stroke">#aaaaaa</color>
     <color name="analog_hands_seconds">#ff2222</color>
 </resources>
